--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,10 @@
-Title: Sey
-logo: assets/images/profile_pic.png
+title: Sey
+description: ""
+logo: /assets/images/profile_pic.png
 
-show_downloads: True
-remote_theme: pages-themes/cayman@v0.2.0
+show_downloads: true
+
+remote_theme: "pages-themes/cayman@v0.2.0"
+
 plugins:
-- jekyll-remote-theme
+  - jekyll-remote-theme
